fnol-ecs.yaml
AWSTemplateFormatVersion: "2010-09-09"
Parameters:
  SubnetID:
    Type: String
Resources:
  Cluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: fnol-prj-fargate-cluster
  LogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: fnol-prj-fargate-cluster-log-group
  ExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: fnol-prj-fargate-cluster-role
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
  ContainerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: alb-80-sg
      GroupDescription: Security group to allow port 80 to be open. this is for 
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupName: alb-80-sg
  TaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: cf-fnol-API-fargate
      NetworkMode: awsvpc
      ExecutionRoleArn: !Ref ExecutionRole
      RequiresCompatibilities:
        - FARGATE
        - EC2
      Cpu: 256
      Memory: 512
      ContainerDefinitions:
        - Name: fnol-java-API-fargate
          Image: 964803402269.dkr.ecr.ap-northeast-1.amazonaws.com/ecs-api-main
          PortMappings:
            - ContainerPort: 8080
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-region: !Ref AWS::Region
              awslogs-group: !Ref LogGroup
              awslogs-stream-prefix: ecs
              
    Properties:
      Family: fnol-tasks-fargate
      NetworkMode: awsvpc
      ExecutionRoleArn: !Ref ExecutionRole
      RequiresCompatibilities:
        - FARGATE
        - EC2
      Cpu: 256
      Memory: 512
      ContainerDefinitions:
        - Name: cf-fnol-java-API-fargate
          Image: 964803402269.dkr.ecr.ap-northeast-1.amazonaws.com/ecs-api-main
          PortMappings:
            - ContainerPort: 8080
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-region: !Ref AWS::Region
              awslogs-group: !Ref LogGroup
              awslogs-stream-prefix: ecs
        
        - Name: fnol-UI-fargate
          Image: 964803402269.dkr.ecr.ap-northeast-1.amazonaws.com/ecs-front
          PortMappings:
            - ContainerPort: 80
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-region: !Ref AWS::Region
              awslogs-group: !Ref LogGroup
              awslogs-stream-prefix: ecs
  Service:
    Type: AWS::ECS::Service
    Properties:
      ServiceName: deployment-exmaple-service
      Cluster: !Ref Cluster
      TaskDefinition: !Ref TaskDefinition
      DesiredCount: 1
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          Subnets:
            - !Ref SubnetID
          SecurityGroups:
            - !GetAtt ContainerSecurityGroup.GroupId
  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      # SubnetMappings:
      Name: ces-alb2
      SecurityGroups:
        - !GetAtt ContainerSecurityGroup.GroupId
      Subnets:
        - subnet-bca168f4
        - subnet-c8635893
      Type: application
      # At least two subnets in two different Availability 
      # Zones must be specified
      # (Service: AmazonElasticLoadBalancing;
      #  Status Code: 400;
      #  Error Code: ValidationError;
      #  Request ID: c38f481d-84a3-41ef-9853-b48bb563c9c0;
      #  Proxy: null)
